temp/components_analysis_final.log
  File "<string>", line 1
    import sqlite3; conn = sqlite3.connect('projects/sampleSrc/metadata.db'); cursor = conn.cursor(); cursor.execute('SELECT COUNT(*) FROM components WHERE component_type = "CLASS"'); classes = cursor.fetchone()[0]; cursor.execute('SELECT COUNT(*) FROM components WHERE component_type = "API_ENTRY"'); api_entries = cursor.fetchone()[0]; cursor.execute('SELECT COUNT(*) FROM components WHERE component_type = "METHOD"'); methods = cursor.fetchone()[0]; print(f'클래스 수: {classes}'); print(f'API_ENTRY 수: {api_entries}'); print(f'METHOD 수: {methods}'); cursor.execute('SELECT component_name, component_type, layer FROM components WHERE component_type IN ("CLASS", "API_ENTRY", "METHOD") ORDER BY component_type, component_name'); components = cursor.fetchall(); print('\\n컴포넌트 목록:'); for name, type_, layer in components: print(f'  {name} ({type_}, {layer})'); conn.close()
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             ^^^
SyntaxError: invalid syntax
